config-driven-services - tck tests.